--- a/.github/workflows/cd-aws.yml
+++ b/.github/workflows/cd-aws.yml
@@ -40,7 +40,7 @@ jobs:
         echo "::set-output name=GITHUB_CLIENT_SECRET::AWS_$TARGET_ENV_SECRET_GITHUB_CLIENT_SECRET"
         echo "::set-output name=POSTGRESQL_PASSWORD::AWS_$TARGET_ENV_SECRET_POSTGRESQL_PASSWORD"
         echo "::set-output name=POSTGRESQL_URL::AWS_$TARGET_ENV_SECRET_POSTGRESQL_URL"
-        echo "GCP: AWS_$TARGET_ENV_SECRET_GCP"
+        echo "GCP: AWS_${TARGET_ENV}_SECRET_GCP"
         echo "GITHUB_APP_CLIENT_SECRET: AWS_$TARGET_ENV_SECRET_GCP"
       env:
         TARGET_ENV: ${{ github.event.inputs.target-env }}  
