renamed http to basic, made getMetaDataForAuthGuard generic, extracted auth types from static and copies them back during create server process

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -44,6 +44,16 @@
       "console": "internalConsole"
     },
     {
+      "name": "Debug Generate Test Data Service",
+      "request": "launch",
+      "runtimeArgs": ["run-script", "generate-test-data-service", "--", "--debug"],
+      "runtimeExecutable": "npm",
+      "skipFiles": ["<node_internals>/**"],
+      "type": "pwa-node",
+      "cwd": "${workspaceFolder}/packages/amplication-data-service-generator",
+      "console": "internalConsole"
+    },
+    {
       "name": "Debug Test Data Service",
       "request": "launch",
       "runtimeArgs": ["run-script", "start", "--", "--debug"],
