--- a/.github/workflows/cd-aws.yml
+++ b/.github/workflows/cd-aws.yml
@@ -157,6 +157,7 @@ jobs:
           SECRETS+=" -p amplication-server.secrets.POSTGRESQL_PASSWORD=\"$(echo $POSTGRESQL_PASSWORD | base64)\""
           SECRETS+=" -p amplication-server.secrets.POSTGRESQL_URL=\"$(echo $POSTGRESQL_URL | base64)\""
           COMMAND="argocd app create $APP_NAME --project default --dest-namespace $NAMESPACE --path helm/charts/amplication  --dest-server https://kubernetes.default.svc --repo $REPO_URL --revision $GITHUB_REF_NAME --values $COMMONM_VALUES_FILE --values $ENV_VALUES_FILE $VERSIONS $SECRETS --upsert"
+          COMMAND=$(echo $COMMAND|tr -d '\n')
           echo "$COMMAND"
           $COMMAND
           COMMAND="argocd app sync $APP_NAME"
