fixed repository lookup

--- a/helm/charts/amplication/values-staging-os.yaml
+++ b/helm/charts/amplication/values-staging-os.yaml
@@ -1,4 +1,11 @@
+amplication-client:
+  deployment:
+    image:
+      repository: 407256539111.dkr.ecr.us-east-1.amazonaws.com/amplication-client-dev
 amplication-server:
+  deployment:
+    image:
+      repository: 407256539111.dkr.ecr.us-east-1.amazonaws.com/amplication-server-dev
   config:
     env:
       GITHUB_APP_APP_ID: "189214"
