--- a/.github/workflows/cd-aws.yml
+++ b/.github/workflows/cd-aws.yml
@@ -150,12 +150,12 @@ jobs:
           COMMAND="argocd login $ARGO_CD_URL --username admin --password $ARGO_CD_PASSWORD --grpc-web"
           echo "$COMMAND"
           $COMMAND
-          SECRETS="-p amplication-server.secrets.GCP='$GCP'"
-          SECRETS+=" -p amplication-server.secrets.GITHUB_APP_CLIENT_SECRET='$(echo $GITHUB_APP_CLIENT_SECRET | base64)'"
-          SECRETS+=" -p amplication-server.secrets.GITHUB_APP_PRIVATE_KEY='$(echo $GITHUB_APP_PRIVATE_KEY | base64)'"
-          SECRETS+=" -p amplication-server.secrets.GITHUB_CLIENT_SECRET='$(echo $GITHUB_CLIENT_SECRET | base64)'"
-          SECRETS+=" -p amplication-server.secrets.POSTGRESQL_PASSWORD='$(echo $POSTGRESQL_PASSWORD | base64)'"
-          SECRETS+=" -p amplication-server.secrets.POSTGRESQL_URL='$(echo $POSTGRESQL_URL | base64)'"
+          SECRETS="-p amplication-server.secrets.GCP=$GCP"
+          SECRETS+=" -p amplication-server.secrets.GITHUB_APP_CLIENT_SECRET=$GITHUB_APP_CLIENT_SECRET
+          SECRETS+=" -p amplication-server.secrets.GITHUB_APP_PRIVATE_KEY=$GITHUB_APP_PRIVATE_KEY
+          SECRETS+=" -p amplication-server.secrets.GITHUB_CLIENT_SECRET=$GITHUB_CLIENT_SECRET"
+          SECRETS+=" -p amplication-server.secrets.POSTGRESQL_PASSWORD=$POSTGRESQL_PASSWORD"
+          SECRETS+=" -p amplication-server.secrets.POSTGRESQL_URL=$POSTGRESQL_URL"
           COMMAND="argocd app create $APP_NAME --project default --dest-namespace $NAMESPACE --path helm/charts/amplication  --dest-server https://kubernetes.default.svc --repo $REPO_URL --revision $GITHUB_REF_NAME --values $COMMONM_VALUES_FILE --values $ENV_VALUES_FILE $VERSIONS $SECRETS --upsert"
           COMMAND=$(echo $COMMAND|tr -d '\n')
           echo "$COMMAND"
