fixed namespace creation

--- a/.github/workflows/cd-aws.yml
+++ b/.github/workflows/cd-aws.yml
@@ -147,7 +147,7 @@ jobs:
           #kubectl apply -f app.yaml
           export TARGET_ENV_SECRET=$(echo $TARGET_ENV | tr 'a-z' 'A-Z' | tr '-' '_')
           echo "TARGET_ENV_SECRET: $TARGET_ENV_SECRET"
-          COMMAND="kubectl create ns $NAMESPACE"
+          COMMAND="kubectl create namespace $NAMESPACE --dry-run=client -o yaml | kubectl apply -f -"
           echo "$COMMAND"
           $COMMAND
           COMMAND="argocd login $ARGO_CD_URL --username admin --password $ARGO_CD_PASSWORD --grpc-web"
