--- a/helm/charts/services/amplication-server/templates/pvc.yaml
+++ b/helm/charts/services/amplication-server/templates/pvc.yaml
@@ -1,3 +1,10 @@
 {{ include "base.pvc" (list . "amplication-server.pvc") -}}
 {{- define "amplication-server.pvc" -}}
+spec:
+  volumeMode: Filesystem
+  accessModes:
+    - ReadWriteMany
+  resources:
+    requests:
+      storage: {{ .Values.pvc.storageRequest }}
 {{- end }}
