feat(storage): setup

--- a/packages/amplication-storage-gateway/package.json
+++ b/packages/amplication-storage-gateway/package.json
@@ -13,7 +13,7 @@
     "docker:build": "docker build ."
   },
   "dependencies": {
-    "@nestjs/common": "8.2.3",
+    "@nestjs/common": "8.4.4",
     "@nestjs/config": "1.1.5",
     "@nestjs/core": "8.2.3",
     "@nestjs/graphql": "9.1.2",
@@ -26,10 +26,12 @@
     "bcrypt": "5.0.1",
     "class-transformer": "0.5.1",
     "class-validator": "0.13.2",
+    "glob": "8.0.1",
     "graphql": "15.7.2",
     "graphql-type-json": "0.3.2",
     "nest-access-control": "2.0.3",
     "nest-morgan": "1.0.1",
+    "nestjs-paginate": "2.5.4",
     "npm-run-all": "4.1.5",
     "passport": "0.5.2",
     "passport-http": "0.3.0",
@@ -43,6 +45,7 @@
     "@nestjs/testing": "8.2.3",
     "@types/bcrypt": "5.0.0",
     "@types/express": "4.17.9",
+    "@types/glob": "7.2.0",
     "@types/graphql-type-json": "0.3.2",
     "@types/jest": "26.0.19",
     "@types/normalize-path": "3.0.0",
