--- a/packages/amplication-data-service-generator/package.json
+++ b/packages/amplication-data-service-generator/package.json
@@ -19,6 +19,7 @@
     "update-test-data-service-snapshot": "jest -u src/tests/create-data-service.spec.ts && jest -u src/tests/server"
   },
   "dependencies": {
+    "@amplication/basic-auth-plugin": "^0.12.6",
     "@amplication/data": "^0.12.6",
     "@babel/parser": "7.14.7",
     "@extra-set/difference": "2.2.4",
