--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "lerna": "4.0.0",
+    "ora": "5.4.0",
     "semver": "7.3.5",
     "winston": "3.3.4"
   },
@@ -30,6 +31,7 @@
     "@graphql-codegen/cli": "2.3.0",
     "@graphql-codegen/typescript": "2.4.1",
     "@types/jest": "27.0.2",
+    "@types/ora": "^3.2.0",
     "@types/semver": "7.3.9",
     "graphql": "15.3.0",
     "npm-run-all": "4.1.5",
