--- a/.github/workflows/generated-app-e2e.yml
+++ b/.github/workflows/generated-app-e2e.yml
@@ -3,7 +3,7 @@ on: workflow_dispatch
 
 jobs:
   e2e:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     timeout-minutes: 60
     steps:
       - uses: actions/checkout@v2
