--- a/.github/workflows/staging-terraform-force-unlock.yml
+++ b/.github/workflows/staging-terraform-force-unlock.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     timeout-minutes: 30
     steps:
       - uses: actions/checkout@v2
