--- a/.github/workflows/staging-terraform-plan.yml
+++ b/.github/workflows/staging-terraform-plan.yml
@@ -8,7 +8,7 @@ on:
         required: true
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
 
