--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@graphql-codegen/cli": "2.3.0",
     "@graphql-codegen/typescript": "2.4.1",
     "@types/jest": "27.0.2",
-    "@types/ora": "^3.2.0",
+    "@types/ora": "3.2.0",
     "@types/semver": "7.3.9",
     "graphql": "15.3.0",
     "npm-run-all": "4.1.5",
