--- a/helm/charts/services/amplication-client/templates/configmap.yaml
+++ b/helm/charts/services/amplication-client/templates/configmap.yaml
@@ -1,5 +1,3 @@
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: '{{ .Values.name }}'
-data: 
+{{ include "base.configmap" (list . "amplication-client.configmap") -}}
+{{- define "amplication-client.configmap" -}}
+{{- end }}
